Various patches to get the plugin working (but slowly)
The use of flaresolverr means it works pretty slow
Also bad commit for fast upload, but fixed parsing of the
wiki webpage and pull using the API instead of the web page
directly. Though I technically don't see much benefit there yet.

--- a/MonsterLootHunter/MonsterLootHunter.csproj
+++ b/MonsterLootHunter/MonsterLootHunter.csproj
@@ -34,6 +34,7 @@
         <OutputPath>bin\Release</OutputPath>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="FlareSolverrSharp" Version="3.0.7" />
         <PackageReference Include="HtmlAgilityPack" Version="1.11.74" />
         <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" Version="1.2.1" />
         <PackageReference Include="XivCommon" Version="9.0.0" />
